...
                            Button {
                                leaveTopPage()
                            } label: {
                                Image(systemName: "chevron.backward")
                            }
                            .accessibilityLabel(Text("nav.play"))
                            .accessibilityIdentifier("play-back")
                        }
                    }
                }
        }
    }

...
